WIP:hero section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,3 +58,9 @@ body {
   background-size: cover;
   background-blend-mode:soft-light;
 }
+.cancel-img {
+  display: none;
+}
+.parentEl:has(input:focus) .cancel-img {
+  display: block;
+}
