WIP:Home page completed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,3 +68,9 @@ body {
   box-shadow: 0 3px 10px 0 #0D0D0D ;
   border-radius: 10px;
 }
+.getStarted {
+  background-image: url('/Personalized\ Recommendations.png');
+}
+.createEventImage {
+  background-image: url('/Create\ Event\ CTA.png');
+}
