--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,12 +24,19 @@
 } */
 
 body {
+
   /* background: var(--background); */
   /* color: var(--foreground); */
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
   overflow: hidden;
   width: 100dvw;
   height: 100dvh;
+}
+.main-style{
+  overflow-x: hidden;
 }
 .profile {
   position: relative;
@@ -73,4 +80,10 @@ body {
 }
 .createEventImage {
   background-image: url('/Create\ Event\ CTA.png');
+}
+.flow-section {
+  overflow-x: auto;
+  margin-bottom: 6.25rem;
+  padding-left: 4.35rem;
+  padding-right: 4.35rem;
 }
